Use Mocha for tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jison": "jison ./src/gdbmi.jison -o ./lib/gdbmi.js",
     "coffee": "coffee --compile --output lib src",
     "prepublish": "npm run coffee && npm run jison",
-    "test": "npm run prepublish && jasmine-node --coffee spec"
+    "pretest": "npm run jison",
+    "test": "mocha --compilers coffee:coffee-script/register"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
   },
   "devDependencies": {
     "coffee-script": "^1.11.1",
-    "jasmine-node": "^1.14.5",
-    "jison": "~0.4.17"
+    "jison": "~0.4.17",
+    "mocha": "^3.1.2",
+    "sinon": "^1.17.6"
   }
 }
