--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ node_js:
   - "5"
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y gdb
+  - sudo apt-get install -y gdb gdbserver
 after_success:
   - bash <(curl -s https://codecov.io/bash)
